# unicode_art

./: Cargo.toml  README.md
src/: arg.rs  main.rs
src/unicode_art/: aspect_ratio.rs  block.rs  braille.rs  classic.rs  color.rs  error.rs  gan.rs  input.rs  mandel.rs  mean.rs  mod.rs  simple.rs  subpixel.rs
